2006-11-08  Daniel Nylander <po@danielnylander.se>

	* docs/sv/sv.po: Updated Swedish translation.
	
2006-10-02  Davyd Madeley  <davyd@madeley.id.au>

	* battstat_applet.c: catch a -1 time and format it correctly

2006-09-21  Ryan Lortie  <desrt@desrt.ca>

	* battstat.h: Rename pixtimer to timeout_id.  Add 'timeout' to record
	  current timeout length.
	* battstat_applet.c: Change pixtimer to timeout_id.  Dynamically
	  determine length of time for next wakeup according to Bug #353885.
	  1 second if on battery.  10 seconds if on AC (reduce polling on
	  servers).

2006-09-21  Ryan Lortie  <desrt@desrt.ca>

	* battstat-hal.c:
	* battstat-hal.h:
	* power-management.c:
	* battstat.h:
	* battstat_applet.c: Add a callback system to notify the applet when
	  changes to the battery state have been reported by HAL (removes the
	  need to poll once per second).  Closes bug #348750.

2006-09-02  Daniel Nylander  <po@danielnylander.se>

	* docs/sv/sv.po: Updated Swedish documentation
	* docs/sv/figures/*.png: Added screenshots.

2006-07-23  Daniel Nylander  <po@danielnylander.se>

	* docs/sv/sv.po: Updated Swedish documentation

2006-07-21  Christophe Bliard  <christophe.bliard@trux.info>

	* docs/fr/fr.po: small update in French documentation
	* docs/fr/figures/*.png: updated screenshots
	
2006-07-10  Rodney Dawes  <dobey@novell.com>

	* GNOME_BattstatApplet.server.in.in:
	* battstat_applet.c (battery_full_notify, battery_full_dialog):
	(battery_low_dialog, about_cb, battery_applet_fill):
	Use battery as the icon name instead of gnome-dev-battery as per the
	icon naming specification

	Fixes #346487

2006-06-29  Daniel Nylander  <po@danielnylander.se>

        * docs/sv/sv.po: Added Swedish translation.
	
2006-01-30  Davyd Madeley  <davyd@madeley.id.au>

	* battstat_applet.c:
	- centre low battery dialog - closes #328959
	- update libnotify API - closes #329145
	  (based on work from Wouter Bolsterlee <gnome@xs4all.nl>)

2006-01-21  Vincent Untz  <vuntz@gnome.org>
