@@ -55,7 +55,7 @@
 
    -->
 
-    <publisher> 
+    <publisher role="maintainer"> 
       <publishername> GNOME Documentation Project </publishername> 
     </publisher> 
   
