@@ -37,8 +37,6 @@
 #endif
 #include <stdlib.h>
 #include <string.h>
-#include <sys/file.h>
-#include <sys/ioctl.h>
 #include <time.h>
 #include <unistd.h>
 
