@@ -1,3 +1,9 @@
+2006-11-15  Kjartan Maraas  <kmaraas@gnome.org>
+
+	* docs/C/battstat.xml: Added role=maintainer.
+	* power-management.c: Remove duplicated includes.
+	* properties.c: Same here.
+
 2006-11-08  Daniel Nylander <po@danielnylander.se>
 
 	* docs/sv/sv.po: Updated Swedish translation.
